Disable reset when cleared

--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -211,7 +211,7 @@ footer#page-footer{
 .alert-minimalist {
 	border-radius: 0px;
     padding: 10px;
-    min-width: 300px;
+    width: 300px;
     min-height: 50px;
     display: inline-flex !important;
     align-items: center;
