--- a/pyVerein/finance/templates/finance/creditor/clearing.html
+++ b/pyVerein/finance/templates/finance/creditor/clearing.html
@@ -99,6 +99,9 @@
 
 <!-- Decimal.js -->
 <script src="{% static 'app/vendors/decimal.js/decimal.min.js' %}"></script>
+
+<!-- Cookie.js -->
+<script src="{% static 'app/js/cookie.js' %}"></script>
 <script>
     $(document).ready(function () {
         clearing_amount = new Decimal(0)
@@ -192,21 +195,6 @@
         }
     });
     
-    function getCookie(name){
-        var cookieValue = null;
-        if (document.cookie && document.cookie != '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
 
-                if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
 </script>
 {% endblock foot %}
