--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -225,6 +225,10 @@ footer#page-footer {
 .c3-chart-arcs-title {
   font-size: 30px; }
 
+table .mdc-select {
+  margin-top: 0px;
+  margin-bottom: 0px; }
+
 @media (max-width: 600px) {
   .form .form-group {
     flex-wrap: wrap; }
