--- a/pyVerein/finance/templates/finance/costobject/detail.html
+++ b/pyVerein/finance/templates/finance/costobject/detail.html
@@ -70,7 +70,7 @@
                 <th></th>
                 <th>{{ debit_sum|floatformat:2 }}</th>
                 <th>{{ credit_sum|floatformat:2 }}</th>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Saldo' %} {{ saldo }}</th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Saldo' %} {{ saldo|floatformat:2 }}</th>
                 <th></th>
             </tr>
         </tfoot>
