--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -83,6 +83,11 @@ div.dataTables_wrapper{
         .mdc-text-field{
             width: 220px;
         }
+        div#accounting_year_filter{
+            width: 150px;
+            margin-right: 15px;
+            padding-bottom: 2px;
+        }
     }
 }
 
