--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -62,6 +62,11 @@ div.dataTables_wrapper div.dataTables_filter input {
 div.dataTables_wrapper div.dataTables_filter .mdc-text-field {
   width: 220px; }
 
+div.dataTables_wrapper div.dataTables_filter div#accounting_year_filter {
+  width: 150px;
+  margin-right: 15px;
+  padding-bottom: 2px; }
+
 .mdl-data-table td,
 .mdl-data-table th {
   font-size: 16px; }
