--- a/pyVerein/finance/templates/finance/impersonal/detail.html
+++ b/pyVerein/finance/templates/finance/impersonal/detail.html
@@ -105,11 +105,15 @@
                     }
                 },
             });
-            // Search
-            $("#transactions_filter").html('<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
+            // Search & Year
+            accounting_year_select = '<div class="mdc-select" id="accounting_year_filter"><select id="year_filter" name="year_filter" aria-controls="transactions" class="form-control input-sm mdc-select__native-control"><option value="0" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{% trans 'All' %}</option>{% for year in accounting_years %}<option value="{{ year.accounting_year }}" {% if year.accounting_year == accounting_year %}selected="selected"{% endif %}>{{ year.accounting_year }}</option>{% endfor %}</select><label class="mdc-floating-label mdc-floating-label--float-above">{% trans 'Accounting_year' %}</label><div class="mdc-line-ripple"></div></div>';
+            $("#transactions_filter").html(accounting_year_select + '<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
             $("#datatable-search").on('keyup', function(e) {
                 dt.search(this.value).draw();
             })
+            $("#year_filter").change(function(e){
+                window.location = "{% url 'finance:impersonal_detail' pk=impersonal.pk %}?year=" + this.value
+            });
 
             // Itemsselect
             $("#transactions_length").html('<div class="mdc-select">' + $('#transactions_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
