Links in new Tab

--- a/pyVerein/app/templates/app/dashboard.html
+++ b/pyVerein/app/templates/app/dashboard.html
@@ -48,8 +48,7 @@
 
 {% endblock %}
 
-{% block foot %}
-    <script src="{% static 'app/vendors/c3/d3.min.js' %}"></script>
+{% block foot %}<script src="{% static 'app/vendors/c3/d3.min.js' %}"></script>
     <script src="{% static 'app/vendors/c3/c3.min.js' %}"></script>
     <script src="{% static 'app/vendors/decimal.js/decimal.min.js' %}"></script>
     <script>
