--- a/pyVerein/finance/templates/finance/creditor/list.html
+++ b/pyVerein/finance/templates/finance/creditor/list.html
@@ -27,13 +27,12 @@
             </tr>
         </thead>
     </table>
-    <a href ="{% url 'finance:creditor_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}">
+    <a href ="{% url 'finance:creditor_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
 {% endblock %}
 
-{% block foot %}
-    <!-- Datatables -->
+{% block foot %}<!-- Datatables -->
     <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
     <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
     <script>
@@ -81,7 +80,7 @@
                 "createdRow":
                     function (row, data, index) {
                         $(row).click(function () {
-                            window.location = data.detail_url;
+                            window.open(data.detail_url);
                         });
                     }
             });
