--- a/pyVerein/finance/templates/finance/impersonal/detail.html
+++ b/pyVerein/finance/templates/finance/impersonal/detail.html
@@ -33,7 +33,7 @@
             {% for transaction in transactions %}
                 <tr>
                     <td class="mdl-data-table__cell--non-numeric">
-                        <a href="{% url 'finance:transaction_detail' internal_number=transaction.internal_number %}" title="{% trans 'Show receipt' %}">
+                        <a href="{% url 'finance:transaction_detail' internal_number=transaction.internal_number %}" title="{% trans 'Show receipt' %}" target="_blank">
                             {{ transaction.document_number }}
                         </a>
                     </td>
@@ -59,21 +59,15 @@
                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Saldo' %} {{ saldo|floatformat:2 }}</th>
                 <th>{{ debit_sum|floatformat:2 }}</th>
                 <th>{{ credit_sum|floatformat:2 }}</th>
-                
-                
             </tr>
         </tfoot>
     </table>
-    <a href ="{% url 'finance:impersonal_list' %}" class="mdc-fab mdc-fab--absolute-bottom-left" aria-label="" title="{% trans 'Back' %}">
-        <i class="mdc-fab__icon fa fa-arrow-left"></i>
-    </a>
-    <a href ="{% url 'finance:impersonal_edit' pk=impersonal.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Edit' %}">
+    <a href="{% url 'finance:impersonal_edit' pk=impersonal.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Edit' %}">
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>    
 {% endblock %}
 
-{% block foot %}
-    <!-- Datatables -->
+{% block foot %}<!-- Datatables -->
     <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
     <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
     <script>
