--- a/pyVerein/members/templates/members/member/list.html
+++ b/pyVerein/members/templates/members/member/list.html
@@ -30,13 +30,12 @@
             </tr>
         </thead>
     </table>
-    <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}">
+    <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
 {% endblock %}
 
-{% block foot %}
-    <!-- Datatables -->
+{% block foot %}<!-- Datatables -->
     <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
     <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
     <script>
@@ -96,7 +95,7 @@
                 "createdRow":
                     function (row, data, index) {
                         $(row).click(function () {
-                            window.location = data.detail_url;
+                            window.open(data.detail_url);
                         });
                     }
             });
