--- a/pyVerein/tasks/templates/tasks/list.html
+++ b/pyVerein/tasks/templates/tasks/list.html
@@ -74,8 +74,7 @@
     </table>
 {% endblock %}
 
-{% block foot %}
-    <!-- Datatables -->
+{% block foot %}<!-- Datatables -->
     <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
     <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
     
